--- a/News/style.css
+++ b/News/style.css
@@ -1,120 +1,149 @@
-body{
+body {
 	padding: 0;
 	margin: 0;
-	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
-header{	
+
+header {
 	background-color: black;
 	color: white;
 }
-.website-header{
+
+.website-header {
 	padding: 20px;
 	height: 80px;
 	display: flex;
 	flex-wrap: wrap;
 }
-.website-header img{
+
+.website-header img {
 	float: left;
 	width: 50px;
-	height: 50px;	
+	height: 50px;
 	margin: 0 30px;
 }
-.website-header h1{
+
+.website-header h1 {
 	margin: auto 0;
 }
-.social-icons{
+
+.social-icons {
 	text-align: right;
 	flex-grow: 1;
 }
-.social-icons i{
+
+.social-icons i {
 	margin: 0 7px;
 	cursor: pointer;
 }
-nav{
+
+nav {
 	background-color: black;
 	height: 50px;
 	margin-bottom: 20px;
 }
-nav ul{
+
+nav ul {
 	margin: 20px 0 0 0;
 }
-.navbar-nav li{
+
+.navbar-nav li {
 	list-style: none;
 	display: inline-block;
 	padding: 10px 20px;
 }
-.navbar-nav li a{
+
+.navbar-nav li a {
 	color: #fff;
 	text-decoration: none;
 	font-size: 20px;
 	text-transform: uppercase;
 	font-weight: 800;
 }
-.navbar-nav li a:hover{
-	color:#e08b6c;
+
+.navbar-nav li a:hover {
+	color: #fed330;
 }
-.breaking-news-section{
+
+.breaking-news-section {
 	padding: 0 30px 0 60px;
 	display: flex;
 }
-#btext{
+
+#btext {
 	width: 200px;
 	font-size: 16px;
 	text-transform: uppercase;
-	color:#e08b6c;
+	color: #fed330;
 	font-weight: 600;
 	margin: auto 0;
 }
-.breaking-news{
+
+.breaking-news {
 	padding: 30px;
 	color: #fff;
-	text-decoration: none;	
+	text-decoration: none;
 	font-weight: 800;
 }
-.breaking-news:hover,.social-icons i:hover{
-	color:#e08b6c;
+
+.breaking-news:hover,
+.social-icons i:hover {
+	color: #fed330;
 	cursor: pointer;
 }
-.bntime{
+
+.bntime {
 	display: inline-block;
-	color: rgba(255,255,255,0.5);
+	color: rgba(255, 255, 255, 0.5);
 	padding: 0 10px;
 	font-size: 12px;
 }
-#popular-news{
+
+#popular-news {
 	display: flex;
 	flex-wrap: wrap;
 	margin: 30px 5%;
 }
-#popular-news h2{
+
+#popular-news h2 {
 	margin: 0;
 	padding: 5px;
 	color: #fff;
 }
-#featured h2{
+
+#featured h2 {
 	background-color: black;
 }
-#latest h2{
-	background-color: darkred;
+
+#latest h2 {
+	background-color: #fed330;
 }
-#our-picks h2{
-	background-color: darkblue;
+
+#our-picks h2 {
+	background-color: #fed330;
 }
-#featured{
+
+#featured {
 	flex: 2;
 }
-#latest,#our-picks{
+
+#latest,
+#our-picks {
 	flex: 1;
 }
-#popular-news img{
+
+#popular-news img {
 	width: 100%;
 	filter: brightness(0.7);
 	transition-duration: 500ms;
 }
-.carousel, .news-container{
+
+.carousel,
+.news-container {
 	position: relative;
 }
-.carousel-text{
+
+.carousel-text {
 	position: absolute;
 	word-wrap: normal;
 	bottom: 5px;
@@ -125,26 +154,32 @@ nav ul{
 	padding: 0 10px;
 	transition-duration: 500ms;
 }
-.news-container .carousel-text{
+
+.news-container .carousel-text {
 	font-size: 18px;
 }
-.carousel-date{
+
+.carousel-date {
 	display: block;
 	text-align: center;
 	font-size: 14px;
-	color: rgba(255,255,255,0.7);
+	color: rgba(255, 255, 255, 0.7);
 	font-weight: 300;
 }
-section{
+
+section {
 	cursor: pointer;
 }
-.news-container:hover > .carousel-text{
+
+.news-container:hover>.carousel-text {
 	bottom: 10px;
 }
-.news-container:hover > img{
+
+.news-container:hover>img {
 	filter: brightness(0.4);
 }
-.more-news{
+
+.more-news {
 	background-color: black;
 	display: flex;
 	flex-wrap: wrap;
@@ -152,31 +187,39 @@ section{
 	justify-content: space-between;
 	color: #fff;
 }
-.news-section{
+
+.news-section {
 	display: flex;
 	flex-wrap: wrap;
 	flex-basis: 70%;
 	justify-content: space-between;
 }
-.world h2{	
-	background-color: #b2175b;
+
+.world h2 {
+	background-color: #fed330;
 }
-.sport h2{
-	background-color: #3c1b75;
+
+.sport h2 {
+	background-color: #fed330;
 }
-.world h2, .sport h2{
-    margin: 10px 0 0 0;
+
+.world h2,
+.sport h2 {
+	margin: 10px 0 0 0;
 	padding: 0 10px;
 }
 
-.more-news img{
+.more-news img {
 	width: 100%;
 	height: 250px;
 }
-.world,.sport{
+
+.world,
+.sport {
 	flex-basis: 45%;
 }
-aside{
+
+aside {
 	width: 90%;
 	padding: 10px;
 	flex-basis: 25%;
@@ -184,39 +227,48 @@ aside{
 	border-radius: 5px;
 	margin: auto 0;
 }
-p{
+
+p {
 	text-align: justify;
 }
-.recent-news{
+
+.recent-news {
 	display: flex;
 }
-.recent-news img{
+
+.recent-news img {
 	width: 70px;
-	height: 70px; 
+	height: 70px;
 	margin: 10px;
 }
-.recent-news p{
+
+.recent-news p {
 	font-size: 14px;
 	font-weight: bold;
 	margin: auto;
 }
-.social-links{
+
+.social-links {
 	display: flex;
 	flex-wrap: wrap;
 	padding: 5%;
 	justify-content: space-between;
 }
-.social-links section{
+
+.social-links section {
 	flex-basis: 30%;
 }
-.social-icons-footer i{
+
+.social-icons-footer i {
 	font-size: 37px;
 	padding: 5px;
 }
-.instagram img{
+
+.instagram img {
 	padding: 5px;
 }
-.footer-buttons{
+
+.footer-buttons {
 	display: block;
 	border: 1px solid #2196f3;
 	color: #2196f3;
@@ -227,51 +279,66 @@ p{
 	padding: 10px 20px;
 	cursor: pointer;
 }
-.footer-buttons:hover{
+
+.footer-buttons:hover {
 	color: #fff;
 	border: 1px solid #fff;
 	background-color: #2196f3;
 }
-.copyright{
+
+.copyright {
 	width: 100%;
 	background-color: black;
 	color: #fff;
 	padding: 5px;
 	text-align: center;
 }
+
 @media only screen and (max-width: 600px) {
-	.breaking-news-section{	
+	.breaking-news-section {
 		padding: 10px;
 		flex-wrap: wrap;
 	}
-	#featured{
+
+	#featured {
 		flex: auto;
-	}	
-	.news-section, aside, .news-section article,.social-links section{
-		flex-basis: 100%;		
 	}
-	aside{
+
+	.news-section,
+	aside,
+	.news-section article,
+	.social-links section {
+		flex-basis: 100%;
+	}
+
+	aside {
 		border-width: 0;
 	}
-	.social-links section{
+
+	.social-links section {
 		margin-top: 20px;
 	}
-	.website-header img{
+
+	.website-header img {
 		width: 35px;
 		height: 35px;
 		padding: 5px;
 	}
-	.website-header h1{
+
+	.website-header h1 {
 		font-size: 15px;
 	}
-	.social-icons{
+
+	.social-icons {
 		flex-basis: 100%;
 	}
-	.navbar-collapse{
+
+	.navbar-collapse {
 		background-color: black;
 		z-index: 16;
 	}
-	.navbar-toggler-icon{
+
+	.navbar-toggler-icon {
 		background-image: url(images/menu.jpg);
 		z-index: 16;
 	}
