--- a/css/index.css
+++ b/css/index.css
@@ -9,10 +9,10 @@ h1,h2,h3{
 }
 
 .botao{
-    color: #FFFFFF;
+    color: black;
     text-decoration: none;
     padding: 10px 30px;
-    background-color: black;
+    background-color: #FFC312;
     font-size: .9rem;
     border-radius: 3px;
 }
@@ -28,7 +28,7 @@ nav{
 
 nav > a {
     text-decoration: none;
-    color: #FFFFFF;
+    color: #FFC312;
     font-weight: 800;
     font-size: 32px;
     font-family: Yellowtail, serif;
@@ -53,7 +53,7 @@ nav ul li a{
     padding: 10px 0;
     width: 100%;
     text-decoration: none;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 /* Cabeçalho  */
@@ -62,17 +62,18 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("../img-2/energy-3141242_1920.jpg");
+    background-image: url("../img-2/landscape-1844230_1280.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    color: #FFFFFF;
+    color:  black;
     text-align: center;
     padding: 20px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 header h1{
-    color: #FFFFFF;
+    color: #FFC312;
 }
 
 header p{
@@ -90,7 +91,7 @@ header p{
 }
 
 #sobre h2{
-    color: #FFFFFF;
+    color: #f9ca24;
 }
 
 #sobre p{
@@ -99,7 +100,7 @@ header p{
 }
 
 #sobre .botao{
-    background-color: #f1f1f1;
+    background-color: #f9ca24;
     color: #1c1c1c;
 }
 
@@ -158,7 +159,7 @@ footer{
 
 footer a{
     text-decoration: none;
-    color: yellow;
+    color: #f9ca24;
 }
 
 @media screen and (min-width: 768px){
