--- a/css/apoie.css
+++ b/css/apoie.css
@@ -3,27 +3,18 @@
 	padding: 0px; 
 	box-sizing: border-box;
 }
-
-body{
-	font-family: 'Montserrat', sans-serif;
+.botao{
+  color: white;
+  text-decoration: none;
+  padding: 10px 30px;
+  background-color: #71068f;
+  font-size: .9rem;
+  border-radius: 3px;
 }
-
-main {
-    width: 100%;  
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-color: black;
-    align-items: center;
-    padding: 15px;
-    
-}
-
 nav img {
+  width: 65px;
+  height: 100px;
   margin-left: 20px;
-width: 65px;
-height: 90px;
-margin-top: 10px;
 }
 
 nav{
@@ -31,7 +22,6 @@ nav{
   flex-direction: row;
   align-items: center;
   background-color: black;
-  height: 80px;
 }
 
 nav ul{
@@ -49,8 +39,8 @@ nav ul li {
 }
 
 nav ul li a{
-  display: inline-block;
-  padding: 10px 0;
+  display: inline;
+  padding: -20px;
   width: 100%;
   text-decoration: none;
   color: #ffffff;
@@ -60,11 +50,26 @@ nav ul li a:hover{
   color: #71068f;
 }
 
+body{
+	font-family: 'Montserrat', sans-serif;
+}
+
+main {
+    width: 100%;  
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: black;
+    align-items: center;
+    padding: 15px;
+    
+}
+
 .sessao {
     width: 960px;
-    height: 600px;
+    height: 700px;
     background: rgb(156,58,180);
-    background: linear-gradient(90deg, rgba(156,58,180,1) 0%, rgba(86,31,111,1) 50%, rgba(66,13,87,1) 100%);
+    background: linear-gradient(90deg, rgba(156,58,180,1) 0%, rgb(161, 133, 173) 50%, rgba(66,13,87,1) 100%);
     border-radius: 5px;
     display: flex;
     flex-wrap: wrap;
@@ -79,24 +84,12 @@ nav ul li a:hover{
 
   .shock {
     width: 316px;
-    margin-top: -20px;
+    margin-top: -150px;
   }
   
   .shock img {
-    width: 400px;
-    margin-top: -80px;
+    max-width: 100%;
   }
-
-  .shock a p{
-      margin-top: -100px;}
-
-    .shock h3{
-    margin-top: 50px;
-    -webkit-text-stroke-width: 0.3px;
-    -webkit-text-stroke-color: #ffffff;
-    font-size: 2em; 
-    color: #71068f;
-    }
 
   .formulario {
     width: 350px;
@@ -107,7 +100,7 @@ nav ul li a:hover{
     font-size: 30px;
     color: white;
     background: rgb(156,58,180);
-    background: linear-gradient(90deg, rgba(156,58,180,1) 0%, rgb(162, 109, 187) 50%, rgba(66,13,87,1) 100%);
+    background: linear-gradient(90deg, rgba(156,58,180,1) 0%, rgb(143, 74, 175) 50%, rgba(66,13,87,1) 100%);
     border-radius: 10px;
     line-height: 1.2;
     text-align: center;
@@ -128,7 +121,7 @@ nav ul li a:hover{
     margin-bottom: 10px;
   }
   
-  .preencher {
+  .email {
     font-size: 15px;
     line-height: 1.5;
     color: #666666;
@@ -162,34 +155,39 @@ nav ul li a:hover{
     align-items: center;
     padding: 0 25px;
   }
-
-  .btn1 {
-    font-size: 10px;
-    line-height: 1.5;
-    color: black;
-    text-transform: uppercase;
-    width: 100px;
-    height: 50px;
-    border-radius: 10px;
-    background: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 500px;
-    margin-top: -50px;
-  }
-
-  .btn1:hover {
-    color: white;
-    background: #333333;
-  }
   
   .btn:hover {
-    color: white;
+    color: #fff;
     background: #333333;
   }
 
-@media (min-width: 400px) and (max-width: 800px){
-  .sessao {width: 490px;
-  height: 1200px;}
-}
+  .doacao h3 {
+    font-size: 20px;
+    color: white;
+    background: rgb(156,58,180);
+    background: linear-gradient(90deg, rgba(156,58,180,1) 0%, rgb(163, 107, 189) 50%, rgba(66,13,87,1) 100%);
+    border-radius: 10px;
+    line-height: 1.2;
+    text-align: center;
+    width: 100%;
+    display: block;
+    text-transform: uppercase;
+    margin-top: 50px;
+  }
+
+  .doacao img{
+      width: 110px;
+      height: 110px;
+      align-items: center;
+      margin-top: 20px;
+  }
+
+  .imagens {
+      display: inline;
+  }
+
+  @media (min-width: 400px) and (max-width: 800px){
+    .sessao {width: 490px;
+    height: 1500px;}
+  }
+  
