--- a/css/news.css
+++ b/css/news.css
@@ -1,11 +1,11 @@
 body {
 	padding: 0;
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	font-family: 'Montserrat', sans-serif;
 }
 
 header {
-	background-color: black;
+	background-color: #71068f;
 	color: white;
 }
 
@@ -14,17 +14,19 @@ header {
 	height: 80px;
 	display: flex;
 	flex-wrap: wrap;
+	height: 90px;
 }
 
 .website-header img {
 	float: left;
-	width: 50px;
-	height: 50px;
-	margin: 0 30px;
+	width: 65px;
+	height: 90px;
+	margin-top: -20px;
 }
 
 .website-header h1 {
-	margin: auto 0;
+	margin-left: 50px;
+	color: white;
 }
 
 .social-icons {
@@ -56,13 +58,13 @@ nav ul {
 .navbar-nav li a {
 	color: #fff;
 	text-decoration: none;
-	font-size: 20px;
+	font-size: 18px;
 	text-transform: uppercase;
-	font-weight: 800;
+	margin-bottom: 20px;
 }
 
 .navbar-nav li a:hover {
-	color: #fed330;
+	color: #71068f;
 }
 
 .breaking-news-section {
@@ -74,7 +76,7 @@ nav ul {
 	width: 200px;
 	font-size: 16px;
 	text-transform: uppercase;
-	color: #fed330;
+	color: white;
 	font-weight: 600;
 	margin: auto 0;
 }
@@ -88,13 +90,13 @@ nav ul {
 
 .breaking-news:hover,
 .social-icons i:hover {
-	color: #fed330;
+	color: black;
 	cursor: pointer;
 }
 
 .bntime {
 	display: inline-block;
-	color: rgba(255, 255, 255, 0.5);
+	color: white;
 	padding: 0 10px;
 	font-size: 12px;
 }
@@ -116,11 +118,13 @@ nav ul {
 }
 
 #latest h2 {
-	background-color: #fed330;
+	font-size: 25px;
+	background-color: #71608f;
 }
 
 #our-picks h2 {
-	background-color: #fed330;
+	font-size: 25px;
+	background-color: #71608f;
 }
 
 #featured {
@@ -148,7 +152,7 @@ nav ul {
 	word-wrap: normal;
 	bottom: 5px;
 	z-index: 2;
-	color: #fff;
+	color: white;
 	font-size: 24px;
 	font-weight: bolder;
 	padding: 0 10px;
@@ -157,14 +161,19 @@ nav ul {
 
 .news-container .carousel-text {
 	font-size: 18px;
+	color: white;
 }
 
 .carousel-date {
 	display: block;
 	text-align: center;
 	font-size: 14px;
-	color: rgba(255, 255, 255, 0.7);
+	color: white;
 	font-weight: 300;
+}
+
+.carousel-item p{
+	color: white;
 }
 
 section {
@@ -188,6 +197,10 @@ section {
 	color: #fff;
 }
 
+.more-news h3,p{
+	color: white;
+}
+
 .news-section {
 	display: flex;
 	flex-wrap: wrap;
@@ -196,17 +209,26 @@ section {
 }
 
 .world h2 {
-	background-color: #fed330;
+	font-size: 25px;
+	background-color: #71068f;
 }
 
 .sport h2 {
-	background-color: #fed330;
+	font-size: 25px;
+	background-color: #71068f;
 }
 
 .world h2,
 .sport h2 {
 	margin: 10px 0 0 0;
 	padding: 0 10px;
+	color: white;
+}
+
+.world h3,
+.sport h3 {
+	font-size: 20px;
+	color: #71608f;
 }
 
 .more-news img {
@@ -232,6 +254,10 @@ p {
 	text-align: justify;
 }
 
+aside h4{
+	color: white;
+}
+
 .recent-news {
 	display: flex;
 }
@@ -255,6 +281,10 @@ p {
 	justify-content: space-between;
 }
 
+.social-links p{
+	color: black;
+}
+
 .social-links section {
 	flex-basis: 30%;
 }
@@ -270,20 +300,29 @@ p {
 
 .footer-buttons {
 	display: block;
-	border: 1px solid #2196f3;
-	color: #2196f3;
+	border: 1px solid black;
+	color: black;
 	font-size: 14px;
 	font-weight: bolder;
 	background-color: white;
 	margin: 20px auto;
 	padding: 10px 20px;
 	cursor: pointer;
+	width: 120px;
+}
+
+	#bt1 {
+	margin-top: 50px;
+}
+
+#bt3 {
+	margin-top: 115px;
 }
 
 .footer-buttons:hover {
 	color: #fff;
 	border: 1px solid #fff;
-	background-color: #2196f3;
+	background-color: #71068f;
 }
 
 .copyright {
